--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 
 # Ignore application configuration
 /config/application.yml
+
+/spec/javascripts/helpers/jasmine_examples/*
+/spec/javascripts/jasmine_examples/*
+/app/assets/javascripts/jasmine_examples/*
